updates readme
Signed-off-by: Platan Drizzleword <drizzleword@outlook.com>